@@ -1221,35 +1221,6 @@ try_bsd:
   err2 = select_bits_setup();
   if(err2) goto total_failure;
 
-  // Feel a need to patch this out? First of all, read the FAQ.
-  // Second of all, talk to me. Without this warning, people can
-  // get seriously confused. Ask yourself if users would freak out
-  // about "ps -aux" suddenly changing behavior if a user "x" were
-  // added to the system.
-  //
-  // Also, a "-x" option is coming. It's already there in fact,
-  // for some non-default personalities. So "ps -ax" will parse
-  // as SysV options... and you're screwed if you've been patching
-  // out the friendly warning. Cut-over is likely to be in 2005.
-#ifdef BUILD_WITH_WHINE
-  // Slackware:
-  //   IMO, people can change old habits if and when user 'x' comes
-  //   along.  I still find this warning to be a POLA violation.  No
-  //   offense...  that's the beauty of open source.  You've got your
-  //   ideas about this, and I have mine, and we're allowed to
-  //   disagree.  Nothing in the UNIX or POSIX standards requires
-  //   this (annoying) warning to be displayed, and we're not
-  //   changing the actual behavior of ps in any way.  I know of no
-  //   other 'ps' that produces this message.
-  if(!(personality & PER_FORCE_BSD))
-    fprintf(stderr, _("warning: bad ps syntax, perhaps a bogus '-'?\n"
-                      "See http://gitorious.org/procps/procps/blobs/master/Documentation/FAQ\n"));
-#endif
-  // Remember: contact procps@freelists.org
-  // if you should feel tempted. Be damn sure you understand all
-  // the issues. The same goes for other stuff too, BTW. Please ask.
-  // I'm happy to justify various implementation choices.
-
   choose_dimensions();
   return 0;
 
